--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -8,6 +8,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "web-vitals": "^4.2.4"
